+ Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ header{
     gap: 15px;
     justify-content: center;
     align-content: center;
+    overflow: auto;
 }
 /* CAM */
 .cam{
